unpackaged/main/default/objects/Sales_Operations__c/Sales_Operations__c.object-meta.xml
<CustomObject>
    <description>For Sales Operations team</description>
    <label>Sales Operation</label>
    <nameField>
        <displayFormat>SO-{00000000}</displayFormat>
        <label>Sales Ops No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>