unpackaged/main/default/objects/Sales_Operations__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Operations</relationshipLabel>
    <relationshipName>Sales_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>