unpackaged/main/default/objects/Sales_Operations__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please add the discount approver names in Comments</inlineHelpText>
    <label>Discount Approved</label>
    <type>Checkbox</type>
</CustomField>