unpackaged/main/default/objects/Sales_Operations__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>