unpackaged/main/default/objects/Sales_Operations__c/fields/Date_Licence_Code_Sent_to_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Date_Licence_Code_Sent_to_Sales_Person__c</fullName>
    <label>Date Licence Code Sent to Sales Person</label>
    <type>Date</type>
</CustomField>