unpackaged/main/default/objects/Sales_Operations__c/fields/End_Month__c.field-meta.xml
<CustomField>
    <fullName>End_Month__c</fullName>
    <label>End Month</label>
    <type>Date</type>
</CustomField>