unpackaged/main/default/objects/Sales_Operations__c/fields/Members_for_Commission__c.field-meta.xml
<CustomField>
    <fullName>Members_for_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Team Members for Commission</description>
    <inlineHelpText>Members on Opportunity Team and Synopsis for Commission</inlineHelpText>
    <label>Members for Commission</label>
    <type>Checkbox</type>
</CustomField>