unpackaged/main/default/objects/Sales_Operations__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Operations</relationshipLabel>
    <relationshipName>Sales_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>