unpackaged/main/default/objects/Sales_Operations__c/fields/PO_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>PO_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchase Order attached or Email Confirmation in Activity.</description>
    <inlineHelpText>Purchase Order attached or Email Confirmation in Activity.</inlineHelpText>
    <label>PO Confirmation</label>
    <type>Checkbox</type>
</CustomField>