unpackaged/main/default/objects/Sales_Operations__c/fields/Pricing_Correct__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Correct Synopsis Price</description>
    <inlineHelpText>Correct Synopsis Price</inlineHelpText>
    <label>Pricing Correct</label>
    <type>Checkbox</type>
</CustomField>