unpackaged/main/default/objects/Sales_Operations__c/fields/Proposal_Quote__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Correct Proposal and Quote</description>
    <inlineHelpText>Correct Proposal and Quote</inlineHelpText>
    <label>Proposal/Quote</label>
    <type>Checkbox</type>
</CustomField>