unpackaged/main/default/objects/Sales_Operations__c/fields/Reflected_in_TP__c.field-meta.xml
<CustomField>
    <fullName>Reflected_in_TP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reflected in Territory Plan</description>
    <inlineHelpText>Reflected in Territory Plan</inlineHelpText>
    <label>Reflected in TP</label>
    <type>Checkbox</type>
</CustomField>