unpackaged/main/default/objects/Sales_Operations__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Stage</label>
    <type>Text</type>
</CustomField>