unpackaged/main/default/objects/Sales_Operations__c/fields/Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Start_Month__c</fullName>
    <label>Start Month</label>
    <type>Date</type>
</CustomField>