unpackaged/main/default/objects/Sales_Operations__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
                <default>true</default>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Notified Legal Team</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>