unpackaged/main/default/objects/Sales_Operations__c/fields/Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Ticket_ID__c</fullName>
    <label>Ticket ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>