unpackaged/main/default/objects/Sales_Operations__c/fields/TP_Notes__c.field-meta.xml
<CustomField>
    <fullName>TP_Notes__c</fullName>
    <description>Territory Plan Notes</description>
    <inlineHelpText>Territory Plan Notes</inlineHelpText>
    <label>TP Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>