unpackaged/main/default/objects/Sales_Operations__c/fields/Valid_Contract__c.field-meta.xml
<CustomField>
    <fullName>Valid_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Contract</label>
    <type>Checkbox</type>
</CustomField>