unpackaged/main/default/objects/Sales_Operations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Month__c</columns>
    <columns>End_Month__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>